[gd_scene load_steps=45 format=3 uid="uid://dhq6qeci27rfd"]

[ext_resource type="Script" path="res://core/npcs/an/npc_AN.gd" id="1_o5m3r"]
[ext_resource type="Texture2D" uid="uid://by3415kjum57n" path="res://core/npcs/sen/ase/npc_sen.png" id="2_8xl8h"]
[ext_resource type="Shader" path="res://core/common/shader/color_sprit.gdshader" id="2_soqxa"]
[ext_resource type="Script" path="res://core/npcs/sen/UI.gd" id="2_vgu6s"]
[ext_resource type="Texture2D" uid="uid://cxmtu5l3td2j8" path="res://core/npcs/blood king/ase/bloodking_vfx_only.png" id="2_y57is"]
[ext_resource type="Script" path="res://core/component/NpcDialogueDefault.gd" id="3_l7cds"]
[ext_resource type="Resource" uid="uid://bvaugbl60edin" path="res://test/dialogue/npc_an.dialogue" id="4_yvsgw"]
[ext_resource type="Script" path="res://core/component/DialogueInteractState.gd" id="5_04t0i"]
[ext_resource type="Texture2D" uid="uid://c8rgcfsokceb2" path="res://core/resource/Asset/DARK - FX Pack/Sprite Sheets/All.png" id="5_qwt4w"]
[ext_resource type="Script" path="res://core/component/Move2Vec2.gd" id="5_xmqx8"]
[ext_resource type="Script" path="res://core/component/FaceDirection.gd" id="6_3lqi8"]
[ext_resource type="Script" path="res://core/component/Move2Player.gd" id="7_gg1nx"]
[ext_resource type="Theme" uid="uid://c3gcusv0manb6" path="res://core/common/dialogue_ballon/resource/dialogue_balloon.tres" id="7_lt54b"]
[ext_resource type="Script" path="res://core/npcs/an/AnSaveDataCollector.gd" id="8_kc52x"]
[ext_resource type="Script" path="res://core/component/NpcSaver.gd" id="9_0fx0o"]
[ext_resource type="Script" path="res://test/StateTest.gd" id="11_aqph1"]
[ext_resource type="Script" path="res://core/npcs/npc/script/NpcStateManager.gd" id="13_3cvpl"]
[ext_resource type="Script" path="res://core/npcs/npc/script/NpcBase.gd" id="14_r7oti"]
[ext_resource type="Script" path="res://core/npcs/npc/script/NpcGround.gd" id="15_8aq8x"]
[ext_resource type="Script" path="res://core/ClassTree/NpcIdle.gd" id="16_edcgn"]
[ext_resource type="Script" path="res://core/component/CutsceneTalk.gd" id="18_f7p27"]
[ext_resource type="Script" path="res://core/npcs/sen/talk.gd" id="19_cg4d7"]

[sub_resource type="Shader" id="Shader_4px36"]
code = "shader_type canvas_item;
uniform vec4 color:source_color;
uniform bool enable;
uniform bool colored;
uniform bool mix_modulate = true;
varying flat vec4 modulate;
uniform float mix_modulate_strength = 1.0;

void vertex() {
	modulate = COLOR;
}

void fragment() {
	vec4 new_color = COLOR;
	if (enable){
	// Place fragment code here.
	vec4 old_color=texture(TEXTURE,UV);

	if (colored){
		new_color = color;
		new_color.a=old_color.a*new_color.a*modulate.a;	
		COLOR=new_color;
	};
		
	if (mix_modulate&&!colored){
		COLOR=new_color*modulate*mix_modulate_strength;
		COLOR.a=old_color.a;
	};
}
}
"
metadata/_edit_res_path = "res://core/npcs/an/npc_AN.tscn::Shader_qhepx"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e5gsy"]
shader = SubResource("Shader_4px36")
shader_parameter/color = null
shader_parameter/enable = true
shader_parameter/colored = null
shader_parameter/mix_modulate = true
shader_parameter/mix_modulate_strength = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a2lhw"]

[sub_resource type="Animation" id="Animation_kxl0f"]
length = 1.02
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("base:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_8xl8h")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("base:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("base:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("base:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("base:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.085, 0.17, 0.255, 0.34, 0.425, 0.51, 0.595, 0.68, 0.765, 0.85, 0.935),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_f27vl"]
length = 2.04
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("base:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_8xl8h")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("base:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("base:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("base:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("base:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.085, 0.17, 0.255, 0.34, 0.425, 0.51, 0.595, 0.68, 0.765, 0.85, 0.935, 1.02, 1.105, 1.19, 1.275, 1.36, 1.445, 1.53, 1.615, 1.7, 1.785, 1.87, 1.955),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 32, 33, 34, 35, 36, 37, 38, 39, 40, 0]
}

[sub_resource type="Animation" id="Animation_cqkbp"]
length = 1.615
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("base:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_8xl8h")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("base:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("base:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("base:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("base:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.085, 0.17, 0.255, 0.34, 0.425, 0.51, 0.595, 0.68, 0.765, 0.85, 0.935, 1.02, 1.105, 1.19, 1.275, 1.36, 1.445, 1.53),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 20, 21, 22, 23, 29, 30, 31, 32, 32, 33, 34, 35, 36, 37, 38, 39, 40, 0]
}

[sub_resource type="Animation" id="Animation_27jv2"]
length = 1.955
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("base:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_8xl8h")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("base:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("base:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("base:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("base:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.085, 0.17, 0.255, 0.34, 0.425, 0.51, 0.595, 0.68, 0.765, 0.85, 0.935, 1.02, 1.105, 1.19, 1.275, 1.36, 1.445, 1.53, 1.615, 1.7, 1.785, 1.87),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 41, 42, 43, 30, 31, 32, 44, 32, 44, 32, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56]
}

[sub_resource type="Animation" id="Animation_hkj3w"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("base:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_8xl8h")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("base:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("base:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("base:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("base:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17, 18, 19]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tqh3p"]
_data = {
"Attack Spear": SubResource("Animation_cqkbp"),
"Attack Sword": SubResource("Animation_f27vl"),
"Death": SubResource("Animation_27jv2"),
"Idle": SubResource("Animation_kxl0f"),
"walk": SubResource("Animation_hkj3w")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i3027"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pc6a4"]
bg_color = Color(1, 0.34902, 0.34902, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="Theme" id="Theme_oc8oy"]
ProgressBar/styles/background = SubResource("StyleBoxEmpty_i3027")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_pc6a4")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xlcg1"]
size = Vector2(23, 53)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y44ba"]
shader = ExtResource("2_soqxa")
shader_parameter/color = Color(1, 0, 0, 1)
shader_parameter/enable = true
shader_parameter/colored = null
shader_parameter/mix_modulate = true
shader_parameter/mix_modulate_strength = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_rvi7o"]
atlas = ExtResource("5_qwt4w")
region = Rect2(0, 0, 82, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1nm2"]
atlas = ExtResource("5_qwt4w")
region = Rect2(82, 0, 82, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxv77"]
atlas = ExtResource("5_qwt4w")
region = Rect2(164, 0, 82, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctqse"]
atlas = ExtResource("5_qwt4w")
region = Rect2(246, 0, 82, 65)

[sub_resource type="SpriteFrames" id="SpriteFrames_5cxx8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvi7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1nm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxv77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctqse")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"hit1",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pa07g"]
size = Vector2(7.22, 18.58)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2mu2l"]
size = Vector2(170, 65)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_657i8"]
size = Vector2(31, 65)

[node name="Npc_An" type="Area2D" groups=["player_interactable_only"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_o5m3r")
npc_name = "Npc_An"

[node name="Animation" type="Node2D" parent="."]
scale = Vector2(2, 2)

[node name="base" type="Sprite2D" parent="Animation"]
unique_name_in_owner = true
texture_filter = 1
material = SubResource("ShaderMaterial_e5gsy")
position = Vector2(7, 33)
texture = ExtResource("2_8xl8h")
hframes = 8
vframes = 8
frame = 12
metadata/_aseprite_wizard_config_ = {
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "res://core/npcs/sen/ase",
"o_name": "npc_sen",
"only_visible": true,
"op_exp": true,
"player": "Animation/aniplayer",
"source": "D:/Create/iNNOCENt/ASE/Samurai Re-design.aseprite"
}

[node name="vfx" type="Sprite2D" parent="Animation"]
texture_filter = 1
material = SubResource("ShaderMaterial_a2lhw")
position = Vector2(29.5, -13.7)
texture = ExtResource("2_y57is")
hframes = 10
vframes = 9
metadata/_aseprite_wizard_config_ = {
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "res://core/npcs/blood king/ase",
"o_name": "bloodking_vfx_only",
"only_visible": true,
"op_exp": false,
"player": "Animation/aniplayer",
"source": "D:/Create/iNNOCENt/ASE/The Blood King.aseprite"
}

[node name="aniplayer" type="AnimationPlayer" parent="Animation"]
libraries = {
"": SubResource("AnimationLibrary_tqh3p")
}

[node name="UI" type="Node2D" parent="."]
script = ExtResource("2_vgu6s")

[node name="StiffBar" type="ProgressBar" parent="UI"]
modulate = Color(1, 1, 1, 0.854902)
offset_left = -10.0
offset_right = 10.0
offset_bottom = 2.0
theme = SubResource("Theme_oc8oy")
value = 50.0
show_percentage = false

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-1.5, 37.5)
shape = SubResource("RectangleShape2D_xlcg1")

[node name="HitFX" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_y44ba")
position = Vector2(-8, 30)
sprite_frames = SubResource("SpriteFrames_5cxx8")
animation = &"hit1"

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(4.18323, 9.50734)
collision_layer = 256
collision_mask = 0
input_pickable = false
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(16.5491, 3.68471)
scale = Vector2(1.46913, 0.836577)
shape = SubResource("RectangleShape2D_pa07g")

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(67, 31.5)
shape = SubResource("RectangleShape2D_2mu2l")

[node name="Panel" type="Panel" parent="PlayerDetection/CollisionShape2D"]
visible = false
offset_left = -85.0
offset_top = -33.0
offset_right = 85.0
offset_bottom = 34.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 33)
shape = SubResource("RectangleShape2D_657i8")

[node name="DialoguePosition" type="Marker2D" parent="."]
position = Vector2(10, 13)

[node name="Move2Player" type="Node" parent="."]
script = ExtResource("7_gg1nx")
distance = 50

[node name="Move2Vec2" type="Node" parent="."]
script = ExtResource("5_xmqx8")

[node name="NpcDialogueDefault" type="Node" parent="."]
script = ExtResource("3_l7cds")
dialogue_resource = ExtResource("4_yvsgw")

[node name="DialogueinteractState" type="Node" parent="."]
script = ExtResource("5_04t0i")

[node name="CutsceneTalk" type="Node" parent="."]
script = ExtResource("18_f7p27")

[node name="FaceDirection" type="Node" parent="."]
script = ExtResource("6_3lqi8")

[node name="test" type="Label" parent="."]
visible = false
offset_left = -55.0
offset_top = -13.0
offset_right = 57.0
offset_bottom = -1.0
theme = ExtResource("7_lt54b")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "asd"
horizontal_alignment = 1

[node name="StateTest" type="Label" parent="."]
visible = false
offset_left = -55.0
offset_top = -26.0
offset_right = 57.0
offset_bottom = -14.0
theme = ExtResource("7_lt54b")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "asd"
horizontal_alignment = 1
script = ExtResource("11_aqph1")

[node name="Timer" type="Timer" parent="StateTest"]
autostart = true

[node name="SaveDataCollector" type="Node" parent="."]
script = ExtResource("8_kc52x")

[node name="NpcSaver" type="Node" parent="SaveDataCollector"]
script = ExtResource("9_0fx0o")

[node name="NpcStateManager" type="Node" parent="."]
script = ExtResource("13_3cvpl")

[node name="base" type="Node" parent="NpcStateManager"]
script = ExtResource("14_r7oti")

[node name="ground" type="Node" parent="NpcStateManager/base"]
script = ExtResource("15_8aq8x")

[node name="idle" type="Node" parent="NpcStateManager/base/ground"]
script = ExtResource("16_edcgn")
enable_player_detection = true
enable_self = true

[node name="talk" type="Node" parent="NpcStateManager/base/ground"]
script = ExtResource("19_cg4d7")
player_interact_lock = true

[connection signal="timeout" from="StateTest/Timer" to="StateTest" method="_on_timer_timeout"]
